Basic status bar app, shows web view (currently just google)

--- a/DossierProto/Rakefile
+++ b/DossierProto/Rakefile
@@ -1,6 +1,6 @@
 # -*- coding: utf-8 -*-
 $:.unshift("/Library/RubyMotion/lib")
-require 'motion/project/template/ios'
+require 'motion/project/template/osx'
 
 begin
   require 'bundler'
@@ -11,4 +11,11 @@ end
 Motion::Project::App.setup do |app|
   # Use `rake config' to see complete project settings.
   app.name = 'DossierProto'
+
+  app.frameworks = ['Foundation', 'AppKit', 'CoreGraphics', 'WebKit']
+
+  # Sets the app as a background app (does not appear in Dock)
+  # Note: Background apps are still allowed to have utility windows
+  # and this is standard practice for "status bar" apps
+  app.info_plist['LSUIElement'] = true
 end
