--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "The web component of the Dossier HiFi Prototype",
   "dependencies": {
-    "express": "~3.4.4",
+    "express": "~3.4.4"
   },
   "scripts": {
     "start": "node server.js"
