--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "description": "The web component of the Dossier HiFi Prototype",
   "dependencies": {
-    "express": "~3.4.4"
+    "express": "~3.4.4",
+    "consolidate": "~0.10.0",
+    "handlebars": "~2.0.0"
   },
   "scripts": {
     "start": "node server.js"
