--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "express": "~3.4.4",
     "consolidate": "~0.10.0",
-    "handlebars": "~2.0.0"
-  },
+    "swig": "~1.3.2"
+    },
   "scripts": {
     "start": "node server.js"
   },
